# libcalrom

./: .gitignore  CMakeLists.txt  README.md  calrom.c  calrom.h  dates.c  dates.h  temporale.c  temporale.h
spec_cli/: .gitignore  CMakeLists.txt  README.md  main.c
tests/: .gitignore  CMakeLists.txt  calrom_test.c
util/: test_c.rb  test_c.sh  test_h.rb  test_h.sh
